@@ -1,3 +1,7 @@
+2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network.pl.in: added support for WEP key type (ASCII or hexa)
+
 2005-05-08  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* UsersList.pm: added
